# atomic_habits

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
atomic_habits/: celery.py  settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: bot.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options.py  0004_habit_task_id.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
